--- a/src/app/pago/page/listar/listar.html
+++ b/src/app/pago/page/listar/listar.html
@@ -28,22 +28,22 @@
 
 				<!-- Checkbox con diseño -->
 				<th class="px-2 py-1 flex items-center space-x-2">
-					<input id="chkDeshabilitar" type="checkbox"
+					<input (click)="btnDesabilitarFechas()" id="chkDeshabilitar" type="checkbox"
 						class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500">
 					<label for="chkDeshabilitar" class="text-sm text-gray-700">Deshabilitar fechas</label>
 				</th>
 
 				<th class="px-2 py-1">
-					<input type="date" [value]="fechaInicio" placeholder="Desde"
+					<input type="date" [disabled]="disableRangoFechas" [value]="fechaInicio" placeholder="Desde"
 						class="w-full border border-gray-300 rounded px-2 py-1 text-sm mb-1">
 				</th>
 				<th class="px-2 py-1">
-					<input type="date" [value]="fechaFin" placeholder="Hasta"
+					<input type="date" [disabled]="disableRangoFechas"  [value]="fechaFin" placeholder="Hasta"
 						class="w-full border border-gray-300 rounded px-2 py-1 text-sm">
 				</th>
 				<th class="px-2 py-1">
 					<button id="btnBuscar"
-						(click)="btnBuscar()"
+						(click)="listarPagos()"
 						class="bg-blue-500 text-white px-3 py-1 rounded text-sm hover:bg-blue-600 w-full">
 						Buscar
 					</button>
