--- a/src/app/lectura/page/listar/listar.html
+++ b/src/app/lectura/page/listar/listar.html
@@ -22,13 +22,13 @@
 
         <!-- Fecha inicio -->
         <th class="px-3 py-2">
-          <input type="date" value={{fechaInicio}} class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
+          <input type="date" [(ngModel)]="fechaInicio" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
                  focus:border-blue-500 focus:ring-2 focus:ring-blue-200" />
         </th>
 
         <!-- Fecha fin -->
         <th class="px-3 py-2">
-          <input type="date" value={{fechaFin}} class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
+          <input type="date" [(ngModel)]="fechaFin" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
                  focus:border-blue-500 focus:ring-2 focus:ring-blue-200" />
         </th>
 
